--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_savio_apk_novo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TesteAgenda">
-
-        <activity android:name=".SplashScreenActivity"></activity>
-
+        <activity android:name=".TestandoActivity"></activity>
+        <activity android:name=".SplashScreenActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,7 +18,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".ActivityClientesVip">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -35,7 +33,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-
     </application>
 
 </manifest>
