--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_savio_apk_novo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TesteAgenda">
-        <activity android:name=".TestandoActivity"></activity>
+        <activity android:name=".FuncionalidadeNovaActivity"></activity>
+        <activity android:name=".TestandoActivity" />
         <activity android:name=".SplashScreenActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
